# Aries-AI

./: .gitignore  .gitmodules  .pr-agent.toml  AGENTS_for_share.md  Aries AI 开发文档.md  BUILDING.md  GIT_WORKFLOW.md  NOTICE  README.md  gradle.properties
.github/workflows/: opencode.yml
Aries-site/: docs-center.html  index.html
Aries-site/assets/: app.js
Aries-site/docs/: BUILDING.md  CODING_STANDARDS.md  FAQ.md  FEISHU_COLLABORATION.md
Aries-site/scripts/: animations.js  app-icons.js  config.js  main.js  marquee.js  modal.js  model-marquee.js  theme.js  utils.js
Aries-site/styles/: animations.css  base.css  components.css  marquee.css  responsive.css
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/anim/: m3t_slide_in_left.xml  m3t_slide_in_right.xml  m3t_slide_out_left.xml  m3t_slide_out_right.xml
app/src/main/res/drawable/: about_icon_bg.xml  bg_action_button_oval.xml  bg_action_button_oval_danger.xml  bg_bottom_sheet_white.xml  bg_btn_check_update_glow.xml  bg_card_border_gradient.xml  bg_circle_accent.xml  bg_circle_glass.xml  bg_circle_green.xml  bg_circle_red.xml  bg_circle_white_shadow.xml  bg_circle_yellow.xml  bg_contact_tag.xml  bg_glass_pane.xml  bg_input_field_drawer.xml  bg_input_field_flat.xml  bg_recommend_gradient.xml  bg_recommend_inner.xml  bg_rounded_input_light.xml  bg_rounded_light.xml  bg_thinking_panel.xml  bg_thinking_rail.xml  bg_user_bubble_water.xml  bg_version_tag.xml  bubble_bot.xml  bubble_user.xml  floating_input_bg.xml  floating_title_bg.xml  glass_panel_bg.xml  glass_toolbar_bg.xml  ic_add_24.xml  ic_floating_window_24.xml  ic_fullscreen_24.xml  ic_home_24.xml  ic_send_24.xml  ripple_circle.xml  rounded_top_bar_bg.xml
app/src/main/res/layout/: activity_about.xml  activity_automation.xml  activity_main.xml  activity_update_history.xml  activity_user_agreement_flow.xml  activity_welcome_virtual.xml  dialog_changelog.xml  dialog_history.xml  dialog_licenses.xml  dialog_release_history.xml  dialog_update_links.xml  dialog_user_agreement.xml  drawer_header.xml  floating_chat_window.xml  item_ai_message_complex.xml  item_conversation.xml  item_license_row.xml  item_release_history.xml  item_user_message_complex.xml  overlay_automation_progress.xml  (+2 more)
docs/: BUILDING.md  CODING_STANDARDS.md  FAQ.md  FEISHU_COLLABORATION.md  TECHNICAL_OVERVIEW.md
xyla/: prompt.json
(+87 files in other folders)
